# khatm

./: README.md  backend.py  main.py  pyproject.toml
.github/workflows/: backend-ci.yml
apps/: app.json  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/database/: connection.py  init_db.py
backend/src/models/: portion.py  recitation.py  user.py
backend/src/routers/: admin.py  auth.py
backend/src/services/: admin_service.py  auth_service.py
backend/src/utils/: security.py  validators.py
backend/tests/: conftest.py  test_admin.py  test_api_endpoints.py  test_auth.py  test_portion_models.py  test_security.py  test_user_models.py  test_validators.py
web/: package-lock.json  package.json
